app/k8s/demo/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo
  labels:
    app: demo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: tristanrobert/rieau-ui
          ports:
            - name: demo
              containerPort: 3000
