app/k8s/demo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  name: demo
spec:
  rules:
  - host: rieau.cohesion-territoires.gouv.fr
    http:
      paths:
      - path: /demo
        backend:
          serviceName: demo
          servicePort: demo
  tls:
  - secretName: rieau-cert
